--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,5 @@ body {
   display: inline-block;
   width: 1000px;
   height: 1414px;
-  background-color: #ccc;
-  border-radius: 10px;
+  background-color: #aac1d7;
 }
