--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,16 @@ body {
   height: 1414px;
   background-color: #fefefe;
 }
+
+.leftRegion {
+  display: inline-block;
+  width: 60%;
+  min-height: 500px;
+}
+
+.rightRegion {
+  display: inline-block;
+  width: 40%;
+  background-color: #f4f4f4;
+  min-height: 500px;
+}
